tests/machine/x/st/map_nested_assign.st
" Generated by Mochi compiler v0.10.25 on 2025-07-13T05:07:58Z
"
| data |
data := Dictionary from:{'outer'->Dictionary from:{'inner'->1}}.
data at: 'outer' at: 'inner' put: 2.
Transcript show: (data at: 'outer' at: 'inner') printString; cr.
